# airdao-gov-user-verifier

./: .gitignore  Cargo.toml  Dockerfile_binary  Dockerfile_db  Dockerfile_indexer  Dockerfile_mailer  Dockerfile_verifier  README.md  compute-rewards.py  rust-toolchain
.github/workflows/: build_and_push.yaml  publish.yaml
artifacts/: HumanSBT.json  RewardDistribution.json  RewardDistributionContract.json
config/: default.json
event-indexer/: Cargo.toml
event-indexer/config/: default.json
event-indexer/src/: auto_refresh_token.rs  config.rs  event_listener.rs  gov_db_provider.rs  indexer_state_redis_cache.rs  lib.rs  main.rs
event-indexer/tests/: test_rewards_contract.rs
gov-portal-db/: Cargo.toml
gov-portal-db/artifacts/: HumanSBT.json  INonExpSBT.json
gov-portal-db/config/: default.json
gov-portal-db/src/: config.rs  error.rs  lib.rs  main.rs  mongo_client.rs  quiz.rs  sbt.rs  server.rs  session_manager.rs  session_token.rs
gov-portal-db/src/rewards_manager/: client.rs  error.rs  mod.rs  rewards_cache.rs
gov-portal-db/src/users_manager/: client.rs  error.rs  mod.rs  mongo_client.rs
gov-portal-db/tests/: test_db.rs  test_rewards_manager.rs  test_users_manager.rs
gov-portal-mocker/: Cargo.toml
gov-portal-mocker/config/: default.json
gov-portal-mocker/src/: main.rs
gov-portal-mocker/static/: assign-email.html  auth-redirect.html  confirm-registration.html  error.html  index.html  no-session.html  no-user.html  pending.html  success.html  valid-message.html
gov-voting-oracle/: Cargo.toml
gov-voting-oracle/artifacts/: VotingContract.json
gov-voting-oracle/config/: default.json
gov-voting-oracle/src/: config.rs  event_listener.rs  main.rs  token_holder_registry.rs
mailer/: Cargo.toml
mailer/config/: default.json
mailer/src/: main.rs  sendgrid.rs  server.rs  templates_manager.rs
mailer/static/: email_verification.html
profiles-fetcher/: Cargo.toml
profiles-fetcher/src/: main.rs
shared/: Cargo.toml
shared/event-signature-macro/: Cargo.toml
shared/event-signature-macro/src/: lib.rs
shared/src/: common.rs  lib.rs  rpc_node_client.rs  utils.rs
shared/src/tests/: common.rs
user-verifier/: Cargo.toml
user-verifier/artifacts/: ServerNodes_Manager.json  ValidatorSet.json
user-verifier/src/: config.rs  error.rs  explorer_client.rs  lib.rs  main.rs  rpc_node_client.rs  server.rs  server_nodes_manager.rs  signer.rs  utils.rs  validators_manager.rs  verification.rs
user-verifier/src/fractal/: client.rs  common.rs  mod.rs  user_profile.rs  utils.rs
user-verifier/src/tests/: common.rs
user-verifier/tests/: common.rs  test_explorer_client.rs  test_sbt.rs  test_sbt_mint.rs  test_server_nodes_manager.rs
user-verifier/tests/artifacts/: HumanSBT.json  HumanSBTIssuer.json  LockKeeper.json  OGSBT.json  OGSBTIssuer.json  SNOSBT.json  SNOSBTIssuer.json  TransparentUpgradeableProxy.json  ValidatorSet.json
