[workspace]
members = [
    "user-verifier",
    "gov-portal-mocker",
    "gov-portal-db",
    "shared"
]
resolver = "2"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
futures-util = "0"

# Ethereum
ethabi = "18.0.0"
ethereum-types = "0.14.1"
jsonrpc-core = "18.0.0"
web3 = { version = "0.19" }

# Crypto
k256 = { version = "0.13" }
ecdsa = { version = "0.16" }
sha3 = "0"

# Web
axum = "0"
tower-http = { version = "0", features = ["cors"] }
reqwest = { version = "0", features = ["rustls-tls", "json", "deflate"] }
jsonwebtoken = "9"
url = { version = "2", features = ["serde"] }

# SerDe
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-email = "3"
bson = { version = "2", features = ["chrono-0_4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0", features = [ "env-filter", "registry" ] }
log = "0"

# Persistence
mongodb = "2"

# Misc
backtrace = "0"
uuid = { version = "1", features = ["v4", "serde"] }
config = { version = "0", default_features = false, features = ["json"] }
chrono = { version = "0", default_features = false, features = ["clock", "serde"] }
assert_matches = "1"
thiserror = "1"
hex = "0"
base64 = "0"
rand = "0"
anyhow = "1"
dotenv = "0"
