[workspace]
members = [
    "user-verifier",
    "gov-portal-mocker",
    "gov-portal-db",
    "shared",
    "mailer",
    "profiles-fetcher",
    "event-indexer"
]
resolver = "2"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
futures-util = "0"
async-trait = "0.1"

# Ethereum
ethers = { version = "2" }
ethabi = "18.0.0"
ethereum-types = "0.14.1"
jsonrpc-core = "18.0.0"
web3 = { version = "0.19" }
ethers-providers = "2"

# Crypto
k256 = { version = "0.13" }
ecdsa = { version = "0.16" }
sha3 = "0"

# Web
axum = "0"
tower-http = { version = "0", features = ["cors"] }
reqwest = { version = "0", features = ["rustls-tls", "json", "deflate"] }
jsonwebtoken = "9"
url = { version = "2", features = ["serde"] }
cid = "0"

# SerDe
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-email = "3"
bson = { version = "2", features = ["chrono-0_4"] }
serde-enum-str = "0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0", features = [ "env-filter", "registry" ] }
log = "0"

# Persistence
mongodb = "3"
redis = { version = "0.26", features = [
    "connection-manager",
    "tokio-comp",
    "tokio-rustls-comp",
]}

# Misc
backtrace = "0"
uuid = { version = "1", features = ["v4", "serde"] }
config = { version = "0.13", default-features = false, features = ["json"] }
chrono = { version = "0", default-features = false, features = ["clock", "serde"] }
assert_matches = "1"
thiserror = "1"
hex = "0"
base64 = "0"
rand = "0"
anyhow = "1"
dotenv = "0"
sendgrid = "0"
clap = { version = "4", features = ["derive"] }
