[package]
name = "airdao-event-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "event_indexer"
path = "src/lib.rs"

[[bin]]
name = "airdao-event-indexer"
path = "src/main.rs"

[dependencies]
# Local
shared = { path = "../shared/" }
airdao-gov-portal-db = { path = "../gov-portal-db"}

# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# Ethereum
ethers = { workspace = true }
ethabi = { workspace = true }
ethereum-types = { workspace = true }
web3 = { workspace = true }
ethers-providers = { workspace = true }

# Crypto
k256 = { workspace = true }
ecdsa = { workspace = true }
sha3 = { workspace = true }

# Web
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
url = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }
serde-email = { workspace = true }
bson = { workspace = true }
serde-enum-str = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Persistence
mongodb = { workspace = true }
redis = { workspace = true }

# Misc
backtrace = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

[features]
default = []
enable-integration-tests = ["shared/enable-integration-tests"]