[package]
name = "airdao-gov-portal-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
shared = { path = "../shared/" }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# Ethereum
ethabi = { workspace = true }
ethereum-types = { workspace = true }
web3 = { workspace = true }

# Crypto
k256 = { workspace = true }
ecdsa = { workspace = true }
sha3 = { workspace = true }

# Web
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
url = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }
serde-email = { workspace = true }
bson = { workspace = true }
serde-enum-str = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Persistence
mongodb = { workspace = true }

# Misc
backtrace = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

[features]
default = ["enable-integration-tests"]
enable-integration-tests = []