[package]
name = "airdao-gov-portal-mocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
shared = { path = "../shared/" }

# Async
tokio = { workspace = true, features = ["fs"] }
futures-util = { workspace = true }

# Ethereum
ethabi = { workspace = true }
ethereum-types = { workspace = true }

# Crypto
k256 = { workspace = true }
ecdsa = { workspace = true }
sha3 = { workspace = true }

# Web
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }
serde-email = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Misc
backtrace = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
