[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { workspace = true }

# Ethereum
ethabi = { workspace = true }
ethereum-types = { workspace = true }

# Crypto
sha3 = { workspace = true }
k256 = { workspace = true }

# Web
jsonwebtoken = { workspace = true }
url = { workspace = true }
cid = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }
serde-email = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Misc
backtrace = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
uuid = { workspace = true }
