[package]
name = "airdao-gov-user-verifier"
version = "0.1.0"
edition = "2021"
default-run = "airdao-gov-user-verifier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
shared = { path = "../shared/" }

# Async
tokio = { workspace = true }

# Ethereum
ethabi = { workspace = true }
ethereum-types = { workspace = true }
web3 = { version = "0.19", optional = true }
jsonrpc-core = { workspace = true, optional = true }

# Crypto
k256 = { workspace = true }
ecdsa = { workspace = true }
sha3 = { workspace = true }

# Web
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Misc
backtrace = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
assert_matches = { workspace = true }

[features]
enable-integration-tests = ["jsonrpc-core", "web3"]